implemented new vk armor moddel